# HEMAnalyzer

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  init.sql  pyproject.toml
app/: Dockerfile  database.py  main.py  requirements.txt
app/routers/: __init__.py  clubs.py  countries.py  fighters.py
app/static/css/: styles.css
app/templates/: fighter_profile.html
dev_db/: init.sql
hema_ratings/: hema_clubs.csv  hema_countries.csv  hema_events.csv  hema_fighters.csv
src/hemanalyzer/: __main__.py  app.py  database.py
src/hemanalyzer/hema_ratings/: hema_countries.csv  hema_events.csv  hema_fighters.csv  hema_tournaments.csv
src/hemanalyzer/models/: club.py  countries.py  fighters.py
src/hemanalyzer/routers/: __init__.py  clubs.py  countries.py  fighters.py
src/hemanalyzer/templates/: fighter_profile.html
